--- a/line-height/继承差异.html
+++ b/line-height/继承差异.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<style>
-    .box1, .box2, .box3 {
-        font-size: 16px;
-        background-color: #eeeddd;
+  </head>
+  <style>
+    .box1,
+    .box2,
+    .box3 {
+      font-size: 16px;
+      background-color: #eeeddd;
     }
 
     .box1 {
-        line-height: 1.5;
+      line-height: 1.5;
     }
 
     .box2 {
-        line-height: 150%;
+      line-height: 150%;
     }
 
     .box3 {
-        line-height: 1.5em;
+      line-height: 1.5em;
     }
 
     h3 {
-        font-size: 32px;
-        background-color: #9b4508;
+      font-size: 32px;
+      background-color: #9b4508;
     }
 
     p {
-        font-size: 20px;
-        background-color: #ab6186;
+      font-size: 20px;
+      background-color: #ab6186;
     }
-</style>
-<body>
+  </style>
+  <body>
+    <!-- line-height的属性值有三种：数值、百分数、长度。
+         使用数值作为line-height 的属性值，所有子元素都继承这个数值
+         使用百分数和长度作为 line-height 的属性值，所有子元素继承的是最终的计算值
+        -->
     <div class="box1">
-        <h3>标题</h3>
-        <p>内容</p>
+      <h3>标题</h3>
+      <p>内容</p>
     </div>
 
     <div class="box2">
-        <h3>标题</h3>
-        <p>内容</p>
+      <h3>标题</h3>
+      <p>内容</p>
     </div>
 
     <div class="box3">
-        <h3>标题</h3>
-        <p>内容</p>
+      <h3>标题</h3>
+      <p>内容</p>
     </div>
-</body>
+  </body>
 </html>
