feat: 为了观测h3和p重叠效果

--- a/line-height/继承差异.html
+++ b/line-height/继承差异.html
@@ -26,6 +26,10 @@
       line-height: 1.5em;
     }
 
+    h3, p {
+        margin: 0;
+    }
+
     h3 {
       font-size: 32px;
       background-color: #9b4508;
